# recipebox_proj

./: pyproject.toml
recipe/: admin.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py
recipe/templates/: addauthor.html  addrecipe.html  author.html  base.html  generic_form.html  index.html  recipe.html
recipebox/: settings.py  urls.py
